--- a/index.html
+++ b/index.html
@@ -63,69 +63,66 @@
                     <h2 class="title">Все сервисы <br class="mobile">и услуги УК <br class="pc-1200">в одном приложении</h2>
                     <h3 class="simple-service__slider-logo">SR</h3>
                 </div>
-                <div class="ss-carousel swiper">
-                    <div class="swiper-wrapper">
-                        <div class="ss-carousel-cell swiper-slide">
-                            <img src="./img/carousel-1.png" class="pc ss-cell__img1" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-1-1200.png" class="pc-1200 ss-cell__img1" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-1-pt.png" class="pt ss-cell__img1" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-1-mobile.png" class="mobile ss-cell__img1" alt="Интерфейс веб-администратора">
-                            <div class="ss-carousel-cell__text">
-                                <h2 class="undertitle">Web-версия<br>Администратора</h2>
-                                <ul class="ss-carousel-cell__list">
-                                    <li class="list">управление заявками</li>
-                                    <li class="list">гибкая статистика по заявкам</li>
-                                    <li class="list">настройка системы: управление помещениями, создание и редактирование услуг, добавление пользователей</li>
-                                    <li class="list">контроль выполнения заявок и качества оказания услуг</li>
-                                    <li class="list">аналитика и формирование отчетов</li>
-                                    <li class="list">рассылки для резидентов</li>
-                                </ul>
-                            </div>
+                <div class="ss-carousel">
+                    <div class="ss-carousel-cell">
+                        <img src="./img/carousel-1.png" class="pc ss-cell__img1" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-1-1200.png" class="pc-1200 ss-cell__img1" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-1-pt.png" class="pt ss-cell__img1" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-1-mobile.png" class="mobile ss-cell__img1" alt="Интерфейс веб-администратора">
+                        <div class="ss-carousel-cell__text">
+                            <h2 class="undertitle">Web-версия<br>Администратора</h2>
+                            <ul class="ss-carousel-cell__list">
+                                <li class="list">управление заявками</li>
+                                <li class="list">гибкая статистика по заявкам</li>
+                                <li class="list">настройка системы: управление помещениями, создание и редактирование услуг, добавление пользователей</li>
+                                <li class="list">контроль выполнения заявок и качества оказания услуг</li>
+                                <li class="list">аналитика и формирование отчетов</li>
+                                <li class="list">рассылки для резидентов</li>
+                            </ul>
                         </div>
-                        <div class="ss-carousel-cell swiper-slide">
-                            <img src="./img/carousel-2.png" class="pc ss-cell__img2" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-2-1200.png" class="pc-1200 ss-cell__img2" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-2-pt.png" class="pt ss-cell__img2" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-2-mobile.png" class="mobile ss-cell__img2" alt="Интерфейс веб-администратора">
-                            <div class="ss-carousel-cell__text">
-                                <h2 class="undertitle">Приложение<br>Резидента</h2>
-                                <ul class="ss-carousel-cell__list">
-                                    <li class="list">оформление и оценка заявок</li>
-                                    <li class="list">контроль статуса заявок</li>
-                                    <li class="list">чат с исполнителями и администратором</li>
-                                    <li class="list">уведомления по заявкам</li>
-                                    <li class="list">новости от УК </li>
-                                    <li class="list">отправка и просмотр показаний счетчиков</li>
-                                    <li class="list">история заявок</li>
-                                </ul>
-                                <div class="ss-carousel__app-box">
-                                    <a href="#"><img src="./img/appleSTORE.png" class="ss-carousel__app-img" alt="ЭплСтор"></a>
-                                    <a href="#"><img src="./img/googlePLAY.png" class="ss-carousel__app-img" alt="ГуглМаркет"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ss-carousel-cell swiper-slide">
-                            <img src="./img/carousel-3.png" class="pc ss-cell__img3" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-3-1200.png" class="pc-1200 ss-cell__img3" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-3-pt.png" class="pt ss-cell__img3" alt="Интерфейс веб-администратора">
-                            <img src="./img/carousel-3-mobile.png" class="mobile ss-cell__img3" alt="Интерфейс веб-администратора">
-                            <div class="ss-carousel-cell__text">
-                                <h2 class="undertitle">Приложение<br>Исполнителя</h2>
-                                <ul class="ss-carousel-cell__list">
-                                    <li class="list">обработка заявок</li>
-                                    <li class="list">акты выполненных работ</li>
-                                    <li class="list">связь с заказчиками и <br class="mobile">диспетчером</li>
-                                    <li class="list">простой и понятный интерфейс</li>
-                                    <li class="list">уведомления на любое <br class="mobile">устройство</li>
-                                </ul>
-                                <div class="ss-carousel__app-box">
-                                    <a href="#"><img src="./img/appleSTORE.png" class="ss-carousel__app-img" alt="ЭплСтор"></a>
-                                    <a href="#"><img src="./img/googlePLAY.png" class="ss-carousel__app-img" alt="ГуглМаркет"></a>
-                                </div>
+                    </div>
+                    <div class="ss-carousel-cell">
+                        <img src="./img/carousel-2.png" class="pc ss-cell__img2" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-2-1200.png" class="pc-1200 ss-cell__img2" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-2-pt.png" class="pt ss-cell__img2" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-2-mobile.png" class="mobile ss-cell__img2" alt="Интерфейс веб-администратора">
+                        <div class="ss-carousel-cell__text">
+                            <h2 class="undertitle">Приложение<br>Резидента</h2>
+                            <ul class="ss-carousel-cell__list">
+                                <li class="list">оформление и оценка заявок</li>
+                                <li class="list">контроль статуса заявок</li>
+                                <li class="list">чат с исполнителями и администратором</li>
+                                <li class="list">уведомления по заявкам</li>
+                                <li class="list">новости от УК </li>
+                                <li class="list">отправка и просмотр показаний счетчиков</li>
+                                <li class="list">история заявок</li>
+                            </ul>
+                            <div class="ss-carousel__app-box">
+                                <a href="#"><img src="./img/appleSTORE.png" class="ss-carousel__app-img" alt="ЭплСтор"></a>
+                                <a href="#"><img src="./img/googlePLAY.png" class="ss-carousel__app-img" alt="ГуглМаркет"></a>
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="ss-carousel-cell">
+                        <img src="./img/carousel-3.png" class="pc ss-cell__img3" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-3-1200.png" class="pc-1200 ss-cell__img3" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-3-pt.png" class="pt ss-cell__img3" alt="Интерфейс веб-администратора">
+                        <img src="./img/carousel-3-mobile.png" class="mobile ss-cell__img3" alt="Интерфейс веб-администратора">
+                        <div class="ss-carousel-cell__text">
+                            <h2 class="undertitle">Приложение<br>Исполнителя</h2>
+                            <ul class="ss-carousel-cell__list">
+                                <li class="list">обработка заявок</li>
+                                <li class="list">акты выполненных работ</li>
+                                <li class="list">связь с заказчиками и <br class="mobile">диспетчером</li>
+                                <li class="list">простой и понятный интерфейс</li>
+                                <li class="list">уведомления на любое <br class="mobile">устройство</li>
+                            </ul>
+                            <div class="ss-carousel__app-box">
+                                <a href="#"><img src="./img/appleSTORE.png" class="ss-carousel__app-img" alt="ЭплСтор"></a>
+                                <a href="#"><img src="./img/googlePLAY.png" class="ss-carousel__app-img" alt="ГуглМаркет"></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
